tests/bad_netpols/subdir1/netpols.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shippingservice-netpol
spec:
  egress: []
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    ports:
    - port: 50051
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - port: 50051
  - from:
    - ipBlock:
        cidr: A #0.0.0.0/0     # All destinations
        #except:
        #- 10.0.0.0/8        # SL Internal    
  podSelector:
    matchLabels:
      app: shippingservice
  policyTypes:
  - Ingress
  - Egress
